hard-gists/4349257/run.log
=== Docker Run Log for 4349257 ===
Started at: Mi 29. Okt 14:36:06 CET 2025

[2025-10-29 14:36:07] START: Running container for 4349257
[2025-10-29 14:36:07] SUCCESS: Container 5916198e4a060395a2c9022be7128160441fd890d88779de78e82db9c9a6d294 started for 4349257
=== Container logs for 4349257 ===
  File "/snippet.py", line 54
    print "Your app is running at http://localhost:8001"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4349257 ===
[2025-10-29 14:36:09] INFO: Container 5916198e4a060395a2c9022be7128160441fd890d88779de78e82db9c9a6d294 has stopped
